--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 /* print */
-#feedback { 
+#print { 
   height: 104px; 
   width: 104px; 
   position: fixed; 
@@ -18,8 +18,7 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
-#feedback a { 
-  display: block; 
+#print a { 
   background: #f00; 
   height: 15px; 
   width: 70px; 
@@ -28,13 +27,9 @@
   font-family: Arial, sans-serif; 
   font-size: 17px; 
   font-weight: bold; 
-  text-decoration: none; 
-  border-bottom: solid 1px #333;
-  border-left: solid 1px #333;
-  border-right: solid 1px #fff;
 }
 
-#feedback a:hover { 
+#print a:hover { 
   background: #06c; 
 }
 
