--- a/css/icomoon-free.css
+++ b/css/icomoon-free.css
@@ -1107,13 +1107,13 @@
 	content: "\e768";
 }
 .icon-facebook:before {
-	content: "\e769";
+	content: "\f354";
 }
 .icon-facebook2:before {
-	content: "\e76a";
+	content: "\f354";
 }
 .icon-facebook3:before {
-	content: "\e76b";
+	content: "\f354";
 }
 .icon-instagram:before {
 	content: "\e76c";
