--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1086,7 +1086,7 @@ pre code {
   }
   .col-md-6 {
     width: 50%;
-	high: 976px;;
+	high: 976px;
   }
   .col-md-5 {
     width: 41.66666666666667%;
