--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4092,7 +4092,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 .navbar-inverse .navbar-nav > li > a {
   color: #fff;
-  background: #1abc9c;
+  background: rgba(26, 188, 126, 0.81);
   margin-top: 5px;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
