--- a/v2/css/style.css
+++ b/v2/css/style.css
@@ -88,7 +88,21 @@ header h1 {
     -moz-border-radius: 6px;
     border-radius: 6px;
 }
-
+#printbutton  a{
+  position: relative;
+  display: block;
+  overflow: hidden;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 28px 0 16px;
+  background-color: rgba(255, 0, 0, 0.78);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #ffffff;
+  white-space: nowrap;
+  border-bottom: 1px solid #555b61;
+  text-overflow: ellipsis;
+}
 .cd-faq {
   width: 90%;
   max-width: 1024px;
@@ -358,19 +372,20 @@ header h1 {
   .cd-faq-group {
     /* all groups visible */
     display: block;
+	margin-bottom: 30px;
   }
   .cd-faq-group > li {
     background: #ffffff;
-    margin-bottom: 6px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
+    margin-bottom: 9px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
     -webkit-transition: box-shadow 0.2s;
     -moz-transition: box-shadow 0.2s;
     transition: box-shadow 0.2s;
   }
   .no-touch .cd-faq-group > li:hover {
-    -webkit-box-shadow: 0px 0px 39px -6px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 39px -6px rgba(0,0,0,0.75);
-	 box-shadow: 0px 0px 39px -6px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 39px -6px rgba(0,0,0,1);
+	-moz-box-shadow: 0px 0px 39px -6px rgba(0,0,0,1);
+	 box-shadow: 0px 0px 39px -6px rgba(0,0,0,1);
   }
   .cd-faq-group .cd-faq-title {
     margin: 2em 0 1em;
