--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -3,10 +3,10 @@ background:red;
 height: 2500px;
 
 }
-#content div {
+content {
 margin-top:55px;
 border: 1px solid #a5d4fc;
 }
-#body {
+body {
 background: #f4f4f4;
 }
