--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -12,6 +12,7 @@ background: #f4f4f4;
 }
 .btn-default {
   color: #333;
-  background-color: #fff;
+  background-color: #red;
   border-color: #ccc;
+  background-image: none;
 }
