--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -17,5 +17,5 @@ background: #f4f4f4;
   background-image: none;
 }
 body nav.navbar{
-border-bottom: 5px solid #595252;
+border-bottom: 2px solid #C3BCBC;
 }
