--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -8,7 +8,7 @@ margin-top:55px;
 border: 1px solid #a5d4fc;
 }
 body {
-background: #f4f4f4;
+background: #FFFFFF;
 }
 .btn-default {
   color: #333;
