--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -20,8 +20,8 @@ background: #FFFFFF;
 border-bottom: 2px solid #C3BCBC;
 }
 
-@media (max-width: @screen-xs-max) { 
-.printbtn{
+@media screen and (max-width: 768px){ 
+.btn-default{
 visibility:hidden;
 }
 }
