--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -1,7 +1,17 @@
+clear-fix::after {
+    content: '';
+    display: block;
+    clear: both;
+    height: 0px;
+    visibility: hidden;
+}
+.navbar-header{
+	float: none;
+}
 .row div {
-background:red;
-height: 100px;
-border: solid;
+	background:red;
+	height: 100px;
+	border: solid;
 
 }
 #content {
@@ -16,12 +26,8 @@ body {
   border-color: #ccc;
   background-image: none;
 }
+
 .navbar{
 	border-bottom: 2px solid #C3BCBC;
 }
 
-@media screen and (max-width: 481px) and (max-width: 768px){ 
-#content {
-	margin-top:
-}
-}
