--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -38,3 +38,12 @@ body {
   font-size: 18px;
   line-height: 20px;
 }
+@media (max-width: @screen-xs-max) { 
+.navbar-brand{
+	float: left;
+	height: 50px;
+	padding: 15px;
+	font-size: 18px;
+	line-height: 20px;
+}
+}
