--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -38,7 +38,7 @@ body {
   font-size: 18px;
   line-height: 20px;
 }
-@media (max-width: @screen-xs-max) { 
+@media (max-width: 480px) { 
 .navbar-brand{
 	float: left;
 	height: 50px;
