--- a/v0/css/bootstrap.css
+++ b/v0/css/bootstrap.css
@@ -1106,8 +1106,8 @@ a {
 }
 a:hover,
 a:focus {
-  color: #23527c;
-  text-decoration: underline;
+  color: #FFF;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
