--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -10,15 +10,16 @@ clear-fix::after {
 }
 .navbar-header{
 	float: none;
+	background-color: white;
 }
-.row div {
-	background:red;
-	height: 100px;
-	border: solid;
-	font-family: "Open Sans", sans-serif;
-}
+
 #content {
 	margin-top:55px;
+	font-family: "Open Sans", sans-serif;
+}
+.row div {
+	background:white;
+	height: 1000px;
 	border: 1px solid #a5d4fc;
 	font-family: "Open Sans", sans-serif;
 }
