--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -8,9 +8,13 @@ clear-fix::after {
     height: 0px;
     visibility: hidden;
 }
+
 .navbar-header{
 	float: none;
 	background-color: white;
+	font-size: 20px;
+	margin-right: 0;
+    margin-left: 0;
 }
 
 #content {
@@ -41,7 +45,7 @@ body {
   float: left;
   height: 50px;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 20px;
   font-family: "Open Sans", sans-serif;
 }
