--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -11,15 +11,15 @@ clear-fix::after {
 
 .navbar-header{
 	float: none;
-	background-color: white;
 	font-size: 20px;
-	margin-right: 0;
-    margin-left: 0;
 }
 
 #content {
 	margin-top:55px;
 	font-family: "Open Sans", sans-serif;
+}
+#menu-color {
+	background-color:white;
 }
 .row div {
 	background:white;
