--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -13,6 +13,7 @@ clear-fix::after {
 	float: none;
 	font-size: 20px;
 	margin-right: 0px; 
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .menu-color{
@@ -37,7 +38,7 @@ clear-fix::after {
   font-size: 20px;
   line-height: 20px;
   font-family: "Open Sans", sans-serif;
-  border-color: #ccc;
+
 }
 #content {
 	margin-top:60px;
