--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -13,11 +13,13 @@ clear-fix::after {
 	float: none;
 	font-size: 20px;
 	margin-right: 0px; 
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+	background-color: rgba(248, 248, 248, 1);
+    border-width: 2px;
+    border-radius: 7px;
 }
 
 .menu-color{
-	background-color:#f8f8f8;
+	background-color:white;
 }
 
 .printbtn {
