--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -66,6 +66,7 @@ body {
 	font-size: 18px;
 	line-height: 20px;
 	font-family: "Open Sans", sans-serif;
+	margin-left: 0px;
 }
 .printbtn {
   background: none;
