--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -16,6 +16,8 @@ clear-fix::after {
 	background-color: rgba(248, 248, 248, 1);
     border-width: 2px;
     border-radius: 7px;
+	border-style: solid;
+	border-color: rgb(248, 248, 248)
 }
 
 .menu-color{
