--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -17,7 +17,7 @@ clear-fix::after {
     border-width: 2px;
     border-radius: 7px;
 	border-style: solid;
-	border-color: rgb(248, 248, 248)
+	border-color: rgb(215, 215, 215);
 }
 
 .menu-color{
