--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -17,7 +17,7 @@ clear-fix::after {
     border-width: 2px;
     border-radius: 7px;
 	border-style: solid;
-	border-color: rgb(215, 215, 215);
+	border-color: #ccc;
 }
 
 .menu-color{
@@ -25,7 +25,7 @@ clear-fix::after {
 }
 
 .printbtn {
-  background: none;
+  background: #5bc0de;
   border-color: #ccc;
   background-image: none;
   float: right;
