--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -25,7 +25,7 @@ clear-fix::after {
 }
 
 .printbtn {
-  background: #5bc0de;
+  background: none;
   border-color: #ccc;
   background-image: none;
   float: right;
