--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -56,10 +56,16 @@ body {
 	background: rgb(248, 248, 248);
 }
 .pofilepic{
-border-radius: 10px;
-max-width: 100%;
-margin-top:10px;
+	border-radius: 10px;
+	max-width: 100%;
+	margin-top:10px;
 }
+#contects .a{
+	line-height: 1.7em;
+	font-weight: lighter;
+	letter-spacing: 1px;
+	font-size: 16px;
+  }
 
 /* adaptive kostili*/ 
 @media (max-width: 480px) { 
