--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -66,39 +66,14 @@ body {
 #contacts{
 	background: none;
 }
-#personal-info #social-icons {
-    margin-bottom: 18px;
-    text-align: center;
-}
-#personal-info #social-icons a {
-    color: #817070;
-}
-#personal-info #social-icons a:hover {
-    text-decoration: none;
-}
-#personal-info #social-icons a:hover span {
-    background: #3F3F3F;
-    color: #FFF;
-}
-#personal-info #social-icons a span {
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transition: all .5s ease;
-    background: #FFFDFD;
-    font-size: 13px;
-    padding: 8px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    border-radius: 20px;
-    margin: 0 5px;
-}
+
 #personal-info #each-holder {
     margin-top: 29px;
-    background: #F3F3F3;
+    background: white;
     width: 100%;
     border-radius: 6px;
     border-bottom: 5px solid #D6D5D5;
+	text-align: center;
 }
 #personal-info #each-holder>div:nth-child(2) {
     /* border-top: none!important; */
