--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -87,20 +87,16 @@ body {
 	text-align: center;
 }
 
-#personal-info #each-holder .each>.icon {
+#personal-info #each-holder  {
     width: 17px;
     color: rgba(26, 188, 126, 0.81);
     overflow: hidden;
     margin: 0 auto;
-}
-#personal-info #each-holder .each>.icon>.icon {
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease;
     margin: 0 2px;
-}
-#personal-info #each-holder .each:hover>.icon>.icon:nth-child(1) {
     margin-left: -15px;
 }
 
