--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -67,6 +67,25 @@ body {
 	background: none;
 }
 
+printbtn btn btn-default navbar-btn hidden-print
+
+#contactf {
+    margin-top: 29px;
+    background: white;
+    width: 100%;
+    border-radius: 6px;
+    border: 1px solid rgb(248, 248, 248);
+	text-align: center;
+	font-family: "Open Sans", sans-serif;
+	min-width: 120px;
+    overflow: hidden;
+    padding-top: 7px;
+    padding-bottom: 7px;
+	border-color: #ccc;
+	text-align: center;
+}
+
+/* 
 #personal-info #each-holder {
     margin-top: 29px;
     background: white;
@@ -75,7 +94,7 @@ body {
     border: 1px solid rgb(248, 248, 248);
 	text-align: center;
 	font-family: "Open Sans", sans-serif;
-	font-size:10px;
+
 	min-width: 120px;
     overflow: hidden;
 }
@@ -87,7 +106,7 @@ body {
 	text-align: center;
 	
 }
-
+*/
 
 
 /* adaptive kostili*/ 
