--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -49,6 +49,9 @@ clear-fix::after {
 #content {
 	margin-top:60px;
 	font-family: "Open Sans", sans-serif;
+	-webkit-box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 30px -5px rgba(0,0,0,0.75);
 }
 
 .row {
@@ -95,14 +98,39 @@ body {
 	  margin-top: 5px;
 	  min-width: 125px;
  }
- .MainContent{
+.MainContent{
 	  border-width: 3px;
 	  border-radius: 7px;
 	  border-style: solid;
 	  border-color: red;
 	  height: 100%;
  }
-
+.ontop {
+	z-index: 1001;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: none;
+	position: absolute;				
+	background-color: #cccccc;
+	color: #aaaaaa;
+	opacity: .4;
+	filter: alpha(opacity = 50);
+}
+#popup {
+	width: 300px;
+	height: 200px;
+	position: absolute;
+	color: #000000;
+	background-color: #ffffff;
+	/* To align popup window at the center of screen*/
+	top: 50%;
+	left: 50%;
+	margin-top: -100px;
+	margin-left: -150px;
+}
+			
 @media (max-width: 480px) { 
 .navbar-brand{
 	float: left;
