--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -105,30 +105,85 @@ body {
 	  border-color: red;
 	  height: 100%;
  }
-.ontop {
-	z-index: 1001;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	display: none;
-	position: absolute;				
-	background-color: #cccccc;
-	color: #aaaaaa;
-	opacity: .4;
-	filter: alpha(opacity = 50);
+.popup-checkbox, .popup {
+  display: none;
 }
-#popup {
-	width: 300px;
-	height: 200px;
-	position: absolute;
-	color: #000000;
-	background-color: #ffffff;
-	/* To align popup window at the center of screen*/
-	top: 50%;
-	left: 50%;
-	margin-top: -100px;
-	margin-left: -150px;
+
+.popup {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.popup:before {
+  display: block;
+  content: ' ';
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  opacity: .5;
+}
+
+.popup-content {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 20px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.popup-shower {
+  color: #00f;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.popup-shower:hover {
+  color: #00a;
+  text-decoration: underline;
+}
+
+.popup-closer {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: #999;
+  font-size: 20px;
+  border: 1px solid #999;
+  display: block;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.popup-closer:hover {
+  background-color: #eee;
+}
+
+.popup-checkbox:checked + .popup {
+  opacity: 1;
+  display: block;
 }
 			
 @media (max-width: 480px) { 
