--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -105,76 +105,44 @@ body {
 	  border-color: red;
 	  height: 100%;
  }
-.popup-checkbox, .popup {
-  display: none;
+ .popup{
+  background:white;
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  z-index:101;
+  width:500px; /*Change your width here*/
+  height:200px; /*Change your height here*/
+  margin:auto;
+}
+/* Responsive Popup */
+@media(max-width:768px){
+  .popup{
+    width:90%;
+    margin:auto 5%;
+  }
 }
 
-.popup {
-  position: fixed;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
+.popup{
+  background:white;
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  z-index:101;
+  width:500px; /*Change your width here*/
+  height:200px; /*Change your height here*/
+  margin:auto;
 }
-
-.popup:before {
-  display: block;
-  content: ' ';
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: #000;
-  opacity: .5;
-}
-
-.popup-content {
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  padding: 20px;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.popup-shower {
-  color: #00f;
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-.popup-shower:hover {
-  color: #00a;
-  text-decoration: underline;
-}
-
-.popup-closer {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  color: #999;
-  font-size: 20px;
-  border: 1px solid #999;
-  display: block;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 50%;
-  cursor: pointer;
+/* Responsive Popup */
+@media(max-width:768px){
+  .popup{
+    width:90%;
+    margin:auto 5%;
+  }
 }
 
 .popup-closer:hover {
