--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -122,3 +122,9 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 }
+#map-canvas {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+}
