--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -125,6 +125,6 @@ body {
 #map-canvas {
         margin: 0;
         padding: 0;
-        height: 100%;
+        height: 300px;
         width: 100%;
 }
