--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -122,14 +122,12 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 }
-#map_canvas1 { height: 100% }
-.modal-dialog{
-height: 100%;
-margin: 0; 
-padding: 0;
+html, body, #map_canvas {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
-.modal-content{
-height: 100%;
-margin: 0; 
-padding: 0;
+#map_canvas {
+    position: relative;
 }
