--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -122,15 +122,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 }
-html, body, #map_canvas {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
 #map_canvas {
-    position: relative;
-	height:100px;
+	height: 300px;
+	width: auto;
+	margin: 10px 10px;
 }
 
 
