--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -122,5 +122,18 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 }
-
+  body { padding: 10px; background-color:#CCC }
+  #map-container { height: 450px }
+  .myInfobox {
+				border: solid 1px black;
+				background-color:rgba(255, 255, 255, 0.5);
+				width: 280px;
+				color: #000;
+				font-family: Arial;
+				font-size: 14px;
+				padding: .5em 1em;
+				border-radius: 10px;
+				margin-left: -30px;
+				margin-top: -6px
+	  }
 
