--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -121,7 +121,7 @@ clear-fix::after {
 }
 }
 
-body { padding: 10px; background-color:#CCC }
+body { padding: 10px;}
 #map-container { height: 450px }
 
 
