--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -137,11 +137,13 @@ font-size:20px;
   line-height: 19px;
   padding: 10px;
   text-align: justify;
-  background: rgba(26, 188, 126, 0.81);
-  color: #FFF;
+  background: white;
+  color: #4E5359;
   margin: 5px -10px -10px -10px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  background-color: #fff; 
+  border-color: #ccc;
 }
 .cbp_tmlabel{
 	  margin: 0;
