--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -132,8 +132,16 @@ body { padding: 10px;}
 font-size:20px;
 }
 
+.ltarget{
+  padding: 8px 15px;
+  margin-bottom: 20px;
+  list-style: none;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+}
+
 .description{
-  font-size: 13px;
+  font-size: 14px;
   line-height: 19px;
   padding: 10px;
   text-align: justify;
@@ -145,16 +153,5 @@ font-size:20px;
   background-color: #fff; 
   border-color: #ccc;
 }
-.cbp_tmlabel{
-	  margin: 0;
-	  background: white;
-	  font-size: 1.2em;
-	  font-weight: 300;
-	  line-height: 1.4;
-	  position: relative;
-	  border-radius: 5px;
-	  color: #4E5359;
-	  text-decoration: none;
-	  font-size: 18px;
-}
+
 
