--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -91,8 +91,8 @@ clear-fix::after {
 	  min-width: 125px;
  }
 .MainContent{
-	  border-width: 3px;
 	  border-width: 1px;
+	  border-radius: 7px;
 	  border-style: solid;
 	  border-color: #ccc;
 	  height: 100%;
