--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -142,7 +142,8 @@ margin-left: -8px;
 .ctitle{
   margin-left: -25px;
 }
-.wspace {
-   width: 45%;
+.kostil {
+  margin-left: -5px;
+  margin-right: 2px;
 }
 
