--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -98,8 +98,6 @@ clear-fix::after {
 	  border-color: #ccc;
 	  height: 100%;
 	  margin-top:5px;
-	  margin-left: -5px;
-		margin-right: 5px;
  }
 
 
@@ -145,5 +143,10 @@ margin-left: -8px;
 .kostil {
   margin-left: -5px;
   margin-right: 2px;
+}
+.skills{
+	  font-size: 14px;
+	  line-height: 1.42857143;
+	  color: #333;
 }
 
