--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -147,6 +147,7 @@ margin-left: -8px;
 .skills{
 	  font-size: 14px;
 	  line-height: 1.42857143;
-	  color: #333;
+	  color: #333;	
+	  font-family: "Open Sans", sans-serif;
 }
 
