--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -144,10 +144,7 @@ margin-left: -8px;
   margin-left: -5px;
   margin-right: 2px;
 }
-.skills{
-	  font-size: 14px;
-	  line-height: 1.42857143;
-	  color: #333;	
-	  font-family: "Open Sans", sans-serif;
+.each{
+  border: 0.1em solid rgba(243, 243, 245, 1);
 }
 
