--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -145,7 +145,9 @@ margin-left: -8px;
   margin-right: 2px;
 }
 .each{
-  border: 0.1em solid rgba(243, 243, 245, 1);
+  border-style: solid;
+  border-color: #ccc;
+  border-width: 1px;
 }
 
 
