--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -138,7 +138,13 @@ margin-left: -8px;
   font-family: "Open Sans", sans-serif;
   margin-top: 5px;
   min-width: 125px;
+  max-width: 125px;
 }
+.body{
+background-image: none
+margin-top:-50px
+}
+
 }
 
 @media (max-width: 480px) { 
