--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -145,6 +145,9 @@ background-image: none
 margin-top:-50px
 }
 .col-xs-12 {
+  width: 33.33333333%;
+}
+.MainContent{
   width: 66.66666667%;
 }
 /*убираем ссылки при печати*/
