--- a/v0/css/custom.css
+++ b/v0/css/custom.css
@@ -138,16 +138,17 @@ margin-left: -8px;
   font-family: "Open Sans", sans-serif;
   margin-top: 5px;
   min-width: 125px;
+  max-width: 125px;
 }
 .body{
 background-image: none
 margin-top:-50px
 }
-.col-xs-12 {
+/*col-xs-12 {
   width: 33.33333333%;
-}
+}*/
 .MainContent{
-  width: 66.66666667%;
+  width: 76.66666667%;
 }
 /*убираем ссылки при печати*/
 a:link:after, a:visited:after {  
